[gd_scene load_steps=5 format=3 uid="uid://co580m3bpg52c"]

[ext_resource type="Script" uid="uid://ca7hpw3jt32xg" path="res://Main/Weapons/Thumb/thumb_ability.gd" id="1_bqesf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5sagf"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(0.964706, 0.0745098, 0, 0.160784)

[sub_resource type="CylinderMesh" id="CylinderMesh_65l32"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_5sagf")
top_radius = 0.0
bottom_radius = 10.0
height = 20.0

[sub_resource type="BoxShape3D" id="BoxShape3D_65l32"]
size = Vector3(20, 20, 20)

[node name="ThumbAbility" type="Node3D"]
script = ExtResource("1_bqesf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.90735e-06, 0, 10)
mesh = SubResource("CylinderMesh_65l32")

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 10)
collision_layer = 0
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0228424, 0.0214291, -0.20245)
shape = SubResource("BoxShape3D_65l32")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
